--- a/.github/workflows/backup-schema.yml
+++ b/.github/workflows/backup-schema.yml
@@ -31,7 +31,9 @@ jobs:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
           SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
-        run: |
+        run: | 
+          # Create backups directory if it doesn't exist
+          mkdir -p database/backups
           # Link to project
           supabase link --project-ref $SUPABASE_PROJECT_ID --password $SUPABASE_DB_PASSWORD
           
