--- a/.github/workflows/backup-schema.yml
+++ b/.github/workflows/backup-schema.yml
@@ -32,28 +32,10 @@ jobs:
           SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
           SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
         run: |
-          run: |
-          # Debug: Show current directory
-          echo "Current directory: $(pwd)"
-          ls -la
-          
-          # Create backups directory if it doesn't exist
-          echo "Creating database/backups directory..."
-          mkdir -p database/backups
-          
-          # Debug: Verify it was created
-          echo "Checking if directory exists..."
-          ls -la database/
-          
-          # Link to project
-          echo "Linking to Supabase project..."
           supabase link --project-ref $SUPABASE_PROJECT_ID --password $SUPABASE_DB_PASSWORD
-          
-          # Dump schema
-          echo "Dumping schema to database/backups/schema_backup_$(date +%Y%m%d).sql"
-          supabase db dump --schema public > database/backups/schema_backup_$(date +%Y%m%d).sql
-          
-          # Keep only last 7 days of backups
+          supabase db dump --schema public > schema_backup_$(date +%Y%m%d).sql
+          mkdir -p database/backups
+          mv schema_backup_*.sql database/backups/
           cd database/backups
           ls -t schema_backup_*.sql | tail -n +8 | xargs -r rm
           
@@ -61,10 +43,7 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          
           git add database/backups/
-          
-          # Only commit if there are changes
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
