--- a/.github/workflows/backup-schema.yml
+++ b/.github/workflows/backup-schema.yml
@@ -33,9 +33,8 @@ jobs:
           SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
         run: |
           supabase link --project-ref $SUPABASE_PROJECT_ID --password $SUPABASE_DB_PASSWORD
-          supabase db dump --schema public > schema_backup_$(date +%Y%m%d).sql
           mkdir -p database/backups
-          mv schema_backup_*.sql database/backups/
+          supabase db dump --schema public --file database/backups/schema_backup_$(date +%Y%m%d).sql
           cd database/backups
           ls -t schema_backup_*.sql | tail -n +8 | xargs -r rm
           
