Enhance backup workflow with DNS resolution and client install
Updated PostgreSQL client installation and modified database connection logic to resolve the host address using nslookup.

--- a/.github/workflows/backup-schema.yml
+++ b/.github/workflows/backup-schema.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install PostgreSQL client
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-client
+          sudo apt-get install -y postgresql-client dnsutils iputils-ping
           
       - name: Backup Database Schema
         env:
@@ -32,14 +32,21 @@ jobs:
         run: |
           mkdir -p database/backups
           
-          # Use pooler connection on port 6543 (supports both IPv4 and IPv6)
-          DB_HOST="aws-0-eu-central-1.pooler.supabase.com"
+          # Resolve to IPv4 using nslookup
+          DB_HOST=$(nslookup db.${SUPABASE_PROJECT_ID}.supabase.co | grep -A1 "Name:" | grep "Address:" | grep -v "#" | awk '{print $2}' | grep -v ":" | head -1)
           
-          echo "Connecting to Supabase pooler..."
+          if [ -z "$DB_HOST" ]; then
+            echo "Failed to resolve IPv4 address, using hostname directly"
+            DB_HOST="db.${SUPABASE_PROJECT_ID}.supabase.co"
+          else
+            echo "Resolved IPv4 address: $DB_HOST"
+          fi
+          
+          echo "Connecting to Supabase database..."
           PGPASSWORD=$SUPABASE_DB_PASSWORD pg_dump \
             -h "$DB_HOST" \
-            -p 6543 \
-            -U "postgres.${SUPABASE_PROJECT_ID}" \
+            -p 5432 \
+            -U postgres \
             -d postgres \
             --schema-only \
             --schema=public \
