--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,7 +1,7 @@
 
 [functions.create-round]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/create-round/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
@@ -12,7 +12,7 @@ entrypoint = "./functions/create-round/index.ts"
 
 [functions.save-score]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/save-score/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
@@ -23,7 +23,7 @@ entrypoint = "./functions/save-score/index.ts"
 
 [functions.get-snapshot]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/get-snapshot/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
@@ -31,3 +31,4 @@ entrypoint = "./functions/get-snapshot/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/get-snapshot/*.html" ]
+# Edge Function Configuration
